Fix: change colours and styles to deal with contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,12 @@ code {
     @apply text-base;
   }
 }
+
+.btn {
+  @apply text-base;
+  @apply text-black;
+}
+
+.btn-outline {
+  @apply text-neutral
+}
